--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body{
   margin: 0px;
   font-size: 100%;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 nav{
